<resources>
    <!-- Labels -->
    <string name="app_name">ICSReader</string>
    <string name="CALENDAR_NAME_LABEL">Calendar Name:</string>
    <string name="URL_LABEL">Calendar URL:</string>
    <string name="USERNAME_LABEL">User:</string>
    <string name="PASSWORD_LABEL">Password:</string>
    <string name="SYNC_INTERVAL_LABEL">Sync interval:</string>
    <string name="COLOR_LABEL">Calendar color:</string>
    <string name="CALENDARBUTTON_TEXT">Select</string>
    <string name="OKBUTTON_LABEL">OK</string>
    <string name="CANCELBUTTON_LABEL">Cancel</string>
    
    <!-- Message strings -->
    <string name="ERROR">Error!</string>
    <string name="UNEXPECTED_ERROR">An unexpected error occured while connecting to the calendar: %s</string>
    <string name="TIMEOUT_ERROR">A timeout occurred while verifying the credentials you entered. Make sure the calendar URL is correct.</string>
    <string name="INVALID_URL_ERROR">The calendar URL is invalid. Please correct it and try again.</string>
    <string name="CONNECTION_REFUSED_ERROR">Connecting to the server failed. Make sure the URL is correct.</string>
    <string name="HTTP_NOT_FOUND_ERROR">The specified calendar file was not found by the server. Make sure the URL is correct.</string>
    <string name="HTTP_UNAUTHORIZED_ERROR">Login to the server failed. Make sure the user name and password you entered are correct.</string>
    <string name="HTTP_UNKNOWN_ERROR">Server returned error code %d. Please contact the server administrator.</string>
    <string name="INVALID_CERT_ERROR">The server certificate could not be verified. Please install the appropriate CA certificate and try again.</string>
    <string name="INVALID_ICS_FILE_ERROR">The specified URL does not point to a valid ICS file. Make sure the URL is correct.</string>
    
    <!-- Internal constants -->
    <string name="ACCOUNT_TYPE">de.int80.ics.reader.ICSCalendar</string>
    <string name="URL_KEY">de.int80.ics.reader.CalendarURL</string>
    <string name="USERNAME_KEY">de.int80.ics.reader.CalendarUserName</string>
    <string name="CALENDAR_ID_KEY">de.int80.ics.reader.CalendarID</string>
    <string name="CALENDAR_ACCOUNT_KEY">de.int80.ics.reader.CalendarAccount</string>
    <string name="CALENDAR_AUTHORITY">com.android.calendar</string>
    <string name="CALENDAR_URI">content://com.android.calendar/calendars</string>
    <string name="EVENTS_URI">content://com.android.calendar/events</string>
    
    <string-array name="SYNC_INTERVAL_ARRAY">
        <item>Manual only</item>
        <item >1 minute</item>
        <item >2 minutes</item>
        <item >5 minutes</item>
        <item >10 minutes</item>
        <item >15 minutes</item>
        <item >30 minutes</item>
        <item >45 minutes</item>
        <item >1 hour</item>
        <item >2 hours</item>
        <item >3 hours</item>
        <item >6 hours</item>
        <item >12 hours</item>
        <item >24 hours</item>
        </string-array>
    <string name="PROGRESS_DIALOG_TITLE">Please wait</string>
    <string name="PROGRESS_DIALOG_TEXT">Checking settings</string>
</resources>
